--- a/MScheduler/WebContent/core/manageMeetings/list.xhtml
+++ b/MScheduler/WebContent/core/manageMeetings/list.xhtml
@@ -40,7 +40,7 @@
 		<!-- The listing form. -->
 		<ui:decorate template="/resources/#{coreInfo.decorator}/form-nobox.xhtml">
 			<ui:param name="formName" value="listingForm" />
-
+			
 			<p:dataTable
 				widgetVar="listingTable"
 				value="#{manageMeetingsController.lazyEntities}" 
@@ -68,7 +68,7 @@
 					</h:outputText>
 				</p:column>
 				<p:ajax event="rowSelect" update=":listingForm:buttonsGroup" />
-				<p:ajax event="rowUnselect" update=":listingForm:buttonsGroup" />
+				<p:ajax event="rowUnselect" update=":listingForm:buttonsGroup" />				
 			</p:dataTable>
 			<p:hotkey bind="ctrl+left" handler="goToFirstPage(listingTable);" />
 			<p:hotkey bind="left" handler="goToPreviousPage(listingTable);" />
@@ -82,6 +82,7 @@
 					<p:commandButton action="#{manageMeetingsController.retrieve}" value="#{msgs['jbutler.crud.button.retrieve']}" icon="fa fa-fw fa-file-text" disabled="#{manageMeetingsController.selectedEntity == null}" />
 					<p:commandButton action="#{manageMeetingsController.update}" value="#{msgs['jbutler.crud.button.update']}" icon="fa fa-fw fa-refresh" disabled="#{manageMeetingsController.selectedEntity == null}" />
 					<p:commandButton action="#{manageMeetingsController.trash}" value="#{msgs['jbutler.crud.button.delete']}" icon="fa fa-fw fa-trash-o" disabled="#{manageMeetingsController.selectedEntity == null}" process="@this" update=":listingForm:trashGroup" />
+					<a style="float: right;" href="#{facesContext.externalContext.requestContextPath}/data/meetings">RDF/XML</a>
 				</ui:decorate>
 				<p:hotkey bind="#{msgs['jbutler.crud.hotkey.create']}" action="#{manageMeetingsController.create}" />
 				<p:hotkey bind="#{msgs['jbutler.crud.hotkey.retrieve']}" action="#{manageMeetingsController.retrieve}" rendered="#{manageMeetingsController.selectedEntity != null}" />
